[package]
name = "d3dx12"
version = "0.1.0"
authors = ["Damyan Pepper <damyanp@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.24"
features = ["Win32_Graphics_Direct3D11", "Win32_Graphics_Direct3D12", "Win32_Graphics_Dxgi", "Win32_Foundation"]
