[package]
name = "d3d12-hello-constbuffers"
version = "0.0.0"
authors = ["Damyan Pepper <damyanp@microsoft.com>"]
edition = "2018"

[dependencies]
array-init = "2.0.0"
bindings = { path="../../../bindings" }
d3dx12 = { path="../../../d3dx12" }
dxsample = { path="../../dxsample" }
static_assertions = "1.1.0"
windows = { package="windows", git="https://github.com/damyanp/windows-rs" }

[build-dependencies]
d3dx12 = { path="../../../d3dx12" }
