[package]
name = "d3d12-hello-texture"
version = "0.0.0"
authors = ["Damyan Pepper <damyanp@microsoft.com>"]
edition = "2018"

[dependencies]
array-init = "2.0.0"
d3dx12 = { path="../../../d3dx12" }
dxsample = { path="../../dxsample" }
windows = "0.29"

[build-dependencies]
d3dx12 = { path="../../../d3dx12" }
