[package]
name = "d3d12-hello-window"
version = "0.0.0"
authors = ["Damyan Pepper <damyanp@microsoft.com>"]
edition = "2018"

[dependencies]
bindings = { path = "../../../bindings" }
d3dx12 = { path = "../../../d3dx12" }
dxsample = { path = "../../dxsample" }
windows = { package = "windows", git="https://github.com/damyanp/windows-rs" }
array-init = "2.0.0"
